@@ -1,3 +1,8 @@
+2007-02-21  Stefan Jahn  <stefan@lkcc.org>
+
+	* tline4p.cpp: Implemented transient simulation model of
+	the 4-terminal transmission line.
+
 2007-02-18  Michael Margraf  <michael.margraf@alumni.tu-berlin.de>
 
 	* microstrip/mscross.cpp: fixed bug in calcCap() equation
